Make `GString` final